force-app/main/default/objects/Candidato__c/Candidato__c.object-meta.xml
<CustomObject>
    <description>Um candidato é uma possoa que foi convidada para participar dos jogos, mas ainda não aceito.</description>
    <label>Candidato</label>
    <nameField>
        <label>Nome do Candidato</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Candidatos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>