force-app/main/default/objects/Candidato__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Data que candidato nasceu registrado na certidão de nascimento. (Usada no cálculo de idade)</description>
    <inlineHelpText>Data que candidato nasceu registrado na certidão de nascimento.</inlineHelpText>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>