force-app/main/default/objects/Candidato__c/fields/Idade__c.field-meta.xml
<CustomField>
    <fullName>idade__c</fullName>
    <description>idade do indivíduo (Não considera ano Bisexto)</description>
    <formula>(TODAY() - DataNascimento__c) / 365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Idade do indivíduo</inlineHelpText>
    <label>Idade</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>