force-app/main/default/objects/Candidato__c/validationRules/FormaContato.validationRule-meta.xml
<ValidationRule>
    <fullName>FormaContato</fullName>
    <active>true</active>
    <description>Usado para validar a forma de contato.</description>
    <errorConditionFormula>ISBLANK( Email__c ) &amp;&amp; ISBLANK(  Celular__c )</errorConditionFormula>
    <errorMessage>É necessário informar uma forma de contato.</errorMessage>
</ValidationRule>